--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
           <li class="nav-item">
             <a class="nav-link fs-4 text-white" href="#">Contacts</a>
           </li>
-
         </ul>
       </div>
     </div>
@@ -110,93 +109,172 @@
   <div class="container px-4 text-center">
     <div class="row gx-5 my-5">
       <div class="col">
-        <div class="p-3"><span class="border w-10% px-5 py-2 border-success text-uppercase text-body-secondary">Elaxander technique</span></div>
+        <div class="p-3"><span
+            class="border w-10% px-5 py-2 border-success text-uppercase text-body-secondary">Elaxander technique</span>
+        </div>
       </div>
-         <div class="col">
-        <div class="p-3"><span class="border  w-10% px-5 py-2 border-success text-uppercase text-secondary">Energy Work</span></div>
-         </div>
-     <div class="col">
-        <div class="p-3"><span class="border px-5 py-2 border-success text-uppercase text-secondary">Modern Meditation</span></div>
+      <div class="col">
+        <div class="p-3"><span class="border  w-10% px-5 py-2 border-success text-uppercase text-secondary">Energy
+            Work</span></div>
+      </div>
+      <div class="col">
+        <div class="p-3"><span class="border px-5 py-2 border-success text-uppercase text-secondary">Modern
+            Meditation</span></div>
       </div>
     </div>
   </div>
 
-  <!-- ============================CARDS STARTS==================================================== -->
-  
+  <!-- ============================columns-alignment==================================================== -->
+
   <section class="my-5">
-    <div class="row">
-      <div class="col-sm-12 col-md-4 col-lg-4 col-12">
-       <img src="project-img/logo1.png" width="70px py-5" alt="">
-            <h5 class="title">Healing</h5>
-            <p class="text text-white">With supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to
-              additional content. This content is a little bit longer</p>
-           <small class="text-white">Read More</small>
-          </div>
-         </div>
-        <div class="col-sm-12 col-md-4 col-lg-4 col-12">
-            <img src="project-img/logo2.png" width="70px py-5" alt="">
-            <h5 class="title">Supportive</h5>
-            <p class="text text-white">With supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to
-              additional content. This content is a little bit longer</p>
-              <small class="text-white">Read More</small>
-            </div>
-        <div class="col-sm-12 col-md-4 col-lg-4 col-12">
-            <img src="project-img/logo3.png" width="70px py-5" alt="">
-            <h5 class="card-title card">Ethical</h5>
-            <p class="card-text text-white">With supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to
-              additional content. This content is a little bit longer</p>
-              <small class="text-white">Read More</small>
-            </div>
+    <div class="row rowan">
+      <div class="col-xs-12 col-sm-4">
+        <img src="project-img/logo1.png" width="70px py-5" alt="">
+        <h5 class="title">Healing</h5>
+        <p class="text text-white">With supporting text below as a natural lead-in to additional content.This is a wider
+          card with supporting text below as a natural lead-in to
+          additional content. This content is a little bit longer</p>
+        <small class="text-white">Read More</small>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <img src="project-img/logo2.png" width="70px py-5" alt="">
+        <h5 class="title">Supportive</h5>
+        <p class="text text-white">With supporting text below as a natural lead-in to additional content.This is a wider
+          card with supporting text below as a natural lead-in to
+          additional content. This content is a little bit longer</p>
+        <small class="text-white">Read More</small>
+      </div>
+      <div class="col-xs col-sm-4">
+        <img src="project-img/logo3.png" width="70px py-5" alt="">
+        <h5 class="title">Ethical</h5>
+        <p class="card-text text-white">With supporting text below as a natural lead-in to additional content.This is a
+          wider card with supporting text below as a natural lead-in to
+          additional content. This content is a little bit longer</p>
+        <small class="text-white">Read More</small>
+      </div>
+    </div>
   </section>
 
-<!-- ===========================================blank-space-white=========================================== -->
-<div class="row mt-5 pt-5">
-  <div class="card text-center">
-    <div class="card-body">
-      <h5 class="card-title text-secondary">Retreats</h5>
-      <p class="card-text text-body-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus minima, minus maxime eligendi inventore error fugiat optio voluptatem, veniam repellendus quia consequuntur nemo. Sapiente eligendi repellendus pariatur ab odit possimus?</p>
-      <div class="p-5"><span class="border w-10% px-5 py-2 border-success text-uppercase text-secondary">Read More and More</span></div>
+  <!-- ===========================================blank-space-white=========================================== -->
+  <div class="row mt-5 pt-5">
+    <div class="card text-center">
+      <div class="card-body">
+        <h5 class="card-title text-secondary">Retreats</h5>
+        <p class="card-text text-body-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+          minima, minus maxime eligendi inventore error fugiat optio voluptatem, veniam repellendus quia consequuntur
+          nemo. Sapiente eligendi repellendus pariatur ab odit possimus?</p>
+        <div class="p-5"><span class="border w-10% px-5 py-2 border-success text-uppercase text-secondary">Read More and
+            More</span></div>
+      </div>
     </div>
   </div>
-</div>
 
-<!-- =======================================card-img-overlay================================================ -->
-<div class="container-fluid container">
-  <img src="project-img/ban1.jpg" alt="Snow" style="width:100%;">
-  <div class="centered">No matter how pressure you feel at work, just go to nature sights to be soothed and healed, and to have your senses put in order. Nature is the purest portal to inner peace.In all things of nature there is something of marvellous</div>
-</div>
+  <!-- =======================================2nd carousel================================================ -->
+  <div id="carouselExampleDark" class="carousel carousel-dark slide">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="10000">
+        <img src="project-img/ters1.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>First slide label</h5>
+          <p>Some representative placeholder content for the first slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
+        <img src="project-img/stree.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Second slide label</h5>
+          <p>Some representative placeholder content for the second slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="project-img/old.avif" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Third slide label</h5>
+          <p>Some representative placeholder content for the third slide.</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
-<!-- ======================================2nd(blank-space white)=================================== -->
-<div class="row mt-5 pt-5">
-  <div class="card text-center">
-    <div class="card-body">
-      <h5 class="card-title text-secondary">For Reservations</h5>
-      <p class="card-text text-body-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus minima, minus maxime eligendi inventore error fugiat optio voluptatem, veniam repellendus quia consequuntur nemo. Sapiente eligendi repellendus pariatur ab odit possimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum maiores quibusdam doloremque, consequuntur minus et reprehenderit aspernatur rem!</p>
-      <div class="p-5"><span class="border w-10% px-5 py-2 border-success text-uppercase text-secondary">Read More and More</span></div>
+  <!-- ===============================2nd-white-blank================================================ -->
+
+  <div class="row mt-5 pt-5">
+    <div class="card text-center">
+      <div class="card-body">
+        <h5 class="card-title text-secondary">Latest Information</h5>
+        <p class="card-text text-body-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+          minima, minus maxime eligendi inventore error fugiat optio voluptatem, veniam repellendus quia consequunturnemo. Sapiente eligendi repellendus pariatur ab odit possimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate officiis quisquam architecto, ratione quos neque soluta nihil, placeat iure quasi sequi ab? Aliquam id accusantium in labore expedita tempora fuga?</p>
+        <div class="p-5"><span class="border w-10% px-5 py-2 border-success text-uppercase text-secondary">Explore More and More</span></div>
+      </div>
     </div>
   </div>
-</div>
 
-<!-- ====================================row-3columns-alignment================================= -->
+<!-- ===============================2nd-columns-alignment=============================================== -->
 
-<!-- <div class="container">
-  <div class="row align-items-start">
-    <div class="col-sm-12 col-md-4 col-lg-4 col-12">
-      One of three columns
+<section class="my-5">
+  <div class="row rowan">
+    <div class="col-xs-12 col-sm-4">
+      <h5 class="title">Healing for connection</h5>
+      <h5 class="title pt-4">connection</h5>
+      <p class="text text-white">With supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to
+        additional content. This content is a little bit longer</p>
+        <h5 class="title">lineup Ratio</h5>
+        <p class="text text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto nihil nam cupiditate rerum </p>
+        <h5 class="title pt-4">Try it</h5>
+        <p class="text text-white">Lets dive in to this!</p>
     </div>
-    <div class="col">
-      One of three columns
+    <div class="col-xs-12 col-sm-4">
+      <h5 class="title">Supportive to be efficient</h5>
+      <h5 class="title pt-4">support</h5>
+      <p class="text text-white">With supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to
+        additional content. This content is a little bit longer</p>
+        <h5 class="title">lineup Ratio</h5>
+        <p class="text text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto</p>
+        <h5 class="title pt-4">Try it</h5>
+        <p class="text text-white">Let's push it more</p>
+        <p class="text text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores minus eum nihil, accusantium laudanti</p>
     </div>
-    <div class="col">
-      One of three columns
+    <div class="col-xs col-sm-4">
+      <h5 class="title">Ethical for society</h5>
+      <h5 class="title pt-4">Societal</h5>
+      <p class="card-text text-white">With supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to
+        additional content. This content is a little bit longer</p>
+        <h5 class="title">lineup Ratio</h5>
+        <p class="text text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto</p>
+        <h5 class="title pt-4">Try it</h5>
+        <p class="text text-white">Let's create!</p>
+         
     </div>
   </div>
-</div>
- -->
+</section>
+
+<!-- ==================================FAQS==================================================== -->
+
+<div class="text-center my-5 mx-5">
+  <button class="btn btn-primary" type="button">Button</button>
+  </div>
 
 
 
 
+
+
+
+
+  
 
 
 
