faq's section done

--- a/index.html
+++ b/index.html
@@ -263,9 +263,13 @@
 
 <!-- ==================================FAQS==================================================== -->
 
-<div class="text-center my-5 mx-5">
-  <button class="btn btn-primary" type="button">Button</button>
-  </div>
+<section class="container">
+<div class="d-grid gap-2 col-6 mt-5 mx-auto">
+  <button class="btn btn-outline-secondary text-success" type="button">Questioniare Form</button>
+  <p class="text-secondary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis</p>
+  <p class="text-secondary mt-0">FAQ'S</p>
+</div>
+</section>
 
 
 
