--- a/index.html
+++ b/index.html
@@ -225,38 +225,40 @@
 <!-- ===============================2nd-columns-alignment=============================================== -->
 
 <section class="my-5">
-  <div class="row rowan">
-    <div class="col-xs-12 col-sm-4">
+  <div class="row rowan pt-5">
+    <div class="mx-5">
+    <button type="button" class="btn btn-outline-light butnory">For Information</button>
+    </div>
+    <div class="col-xs-12 col-sm-4 px-5 ">
       <h5 class="title">Healing for connection</h5>
       <h5 class="title pt-4">connection</h5>
       <p class="text text-white">With supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to
         additional content. This content is a little bit longer</p>
         <h5 class="title">lineup Ratio</h5>
-        <p class="text text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto nihil nam cupiditate rerum </p>
+        <p class="text text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         <h5 class="title pt-4">Try it</h5>
         <p class="text text-white">Lets dive in to this!</p>
     </div>
     <div class="col-xs-12 col-sm-4">
-      <h5 class="title">Supportive to be efficient</h5>
+      <h5 class="title mt-3">Supportive to be efficient and competitive individual</h5>
       <h5 class="title pt-4">support</h5>
       <p class="text text-white">With supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to
         additional content. This content is a little bit longer</p>
         <h5 class="title">lineup Ratio</h5>
         <p class="text text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto</p>
-        <h5 class="title pt-4">Try it</h5>
+        <h5 class="title pt-1">Try it</h5>
         <p class="text text-white">Let's push it more</p>
-        <p class="text text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores minus eum nihil, accusantium laudanti</p>
+        <p class="text text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </div>
-    <div class="col-xs col-sm-4">
-      <h5 class="title">Ethical for society</h5>
+    <div class="col-xs col-sm-4 px-5 ">
+      <h5 class="title">Ethical for society development</h5>
       <h5 class="title pt-4">Societal</h5>
       <p class="card-text text-white">With supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to
         additional content. This content is a little bit longer</p>
         <h5 class="title">lineup Ratio</h5>
         <p class="text text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto</p>
         <h5 class="title pt-4">Try it</h5>
-        <p class="text text-white">Let's create!</p>
-         
+        <p class="text text-white">Let's create!</p>     
     </div>
   </div>
 </section>
@@ -268,6 +270,43 @@
   <button class="btn btn-outline-secondary text-success" type="button">Questioniare Form</button>
   <p class="text-secondary">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis</p>
   <p class="text-secondary mt-0">FAQ'S</p>
+</div>
+</section>
+<!-- =============================FORM-SECTION=============================================== -->
+<section class="my-5">
+<div class="row moran">
+  <div class="col-xs-12 col-sm-4 pt-5 px-5">
+    <h5 class="title pt-4">Get in Touch/ Book Here</h5>
+<div class="form-floating mb-3">
+  <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+  <label for="floatingTextarea" class="px-sm-1">Name*</label>
+</div>
+<div class="">
+<div class="form-floating mb-3">
+  <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+  <label for="floatingInput" class="px-sm-1">Email*</label>
+</div>
+<div class="">
+<div class="form-floating ">
+  <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 200px"></textarea>
+  <label for="floatingTextarea2" class="px-sm-1">Comments*</label>
+</div>
+</div>
+</div>
+</div>
+<div class="col-xs-12 col-sm-4 pt-5">
+  <p class="text text-white pt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ipsa labo</p>
+  <p class="text text-white pt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit nobis sunt dicta laudantium id nemo recusandae officia tenetur.Commodi ab ea magnam officia tenetur.</p>
+</div>
+<div class="col-xs-12 col-sm-4 pt-5 px-5">
+  <img src="project-img/logi.jpg" class="logo" width="70px py-5" alt="">
+  <h5 class="title pt-4">Societal</h5>
+      <p class="card-text text-white">With supporting text below as a natural lead-in to additional conten</p>
+        <h5 class="title">lineup Ratio</h5>
+        <p class="text text-white">Lorem ipsum dolor sit</p>
+        <h5 class="title pt-4">Try it</h5>
+        <p class="text text-white">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde ducimus voluptatem impedit enim veniam voluptate inventore</p>
+</div>
 </div>
 </section>
 
