all assignment done.

--- a/index.html
+++ b/index.html
@@ -180,22 +180,22 @@
       <div class="carousel-item active" data-bs-interval="10000">
         <img src="project-img/ters1.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+          <h5>Recreational Activity</h5>
+          <p>It is nice finding that place where you can just go and relax.</p>
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="2000">
         <img src="project-img/stree.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
+          <h5>Life Is Beautiful</h5>
+          <p>You just have to take deep breath relax and let the game come to you.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="project-img/old.avif" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+          <h5>You are Enough.</h5>
+          <p>The best cure for the body is a quiet mind</p>
         </div>
       </div>
     </div>
@@ -226,9 +226,6 @@
 
 <section class="my-5">
   <div class="row rowan pt-5">
-    <div class="mx-5">
-    <button type="button" class="btn btn-outline-light butnory">For Information</button>
-    </div>
     <div class="col-xs-12 col-sm-4 px-5 ">
       <h5 class="title">Healing for connection</h5>
       <h5 class="title pt-4">connection</h5>
@@ -240,6 +237,7 @@
         <p class="text text-white">Lets dive in to this!</p>
     </div>
     <div class="col-xs-12 col-sm-4">
+      <button type="button" class="btn btn-outline-light mb-4 butnory">For Information</button>
       <h5 class="title mt-3">Supportive to be efficient and competitive individual</h5>
       <h5 class="title pt-4">support</h5>
       <p class="text text-white">With supporting text below as a natural lead-in to additional content.This is a wider card with supporting text below as a natural lead-in to
