last row(payment method)done

--- a/index.html
+++ b/index.html
@@ -287,8 +287,9 @@
 <div class="">
 <div class="form-floating ">
   <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 200px"></textarea>
-  <label for="floatingTextarea2" class="px-sm-1">Comments*</label>
+  <label for="floatingTextarea2" class="px-sm-1">Message*</label>
 </div>
+<button class="float-end btn btn-success my-3 px-5 text-white suber">Submit</button>
 </div>
 </div>
 </div>
@@ -297,13 +298,19 @@
   <p class="text text-white pt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit nobis sunt dicta laudantium id nemo recusandae officia tenetur.Commodi ab ea magnam officia tenetur.</p>
 </div>
 <div class="col-xs-12 col-sm-4 pt-5 px-5">
-  <img src="project-img/logi.jpg" class="logo" width="70px py-5" alt="">
-  <h5 class="title pt-4">Societal</h5>
+  <img src="project-img/facbok-png.png" class="logo" width="70px py-5" alt="">
+  <h5 class="title pt-4">E-mail</h5>
       <p class="card-text text-white">With supporting text below as a natural lead-in to additional conten</p>
-        <h5 class="title">lineup Ratio</h5>
+        <h5 class="title">Telephone</h5>
         <p class="text text-white">Lorem ipsum dolor sit</p>
-        <h5 class="title pt-4">Try it</h5>
+        <h5 class="title pt-4">Address</h5>
         <p class="text text-white">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde ducimus voluptatem impedit enim veniam voluptate inventore</p>
+</div>
+<div class="row">
+  <div class="col-xs-12 offset-md-4 col-md-8 col-sm-12">
+    <h5 class="title">Payments Method</h5>
+    <p class="text text-white pb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ipsa dolorum modi porro sapiente eligendi iure voluptatum, culpa at iste ea, nostrum veritatis vero molestiae voluptas tenetur maiores nesciunt magnam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut nemo odio tenetur aliquam,</p>
+  </div>
 </div>
 </div>
 </section>
