--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -298,7 +299,7 @@
   <p class="text text-white pt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit nobis sunt dicta laudantium id nemo recusandae officia tenetur.Commodi ab ea magnam officia tenetur.</p>
 </div>
 <div class="col-xs-12 col-sm-4 pt-5 px-5">
-  <img src="project-img/facbok-png.png" class="logo" width="70px py-5" alt="">
+  <i class="fa-brands fa-facebook" class="logo1 width-100px"></i>
   <h5 class="title pt-4">E-mail</h5>
       <p class="card-text text-white">With supporting text below as a natural lead-in to additional conten</p>
         <h5 class="title">Telephone</h5>
