last-logo-color done

--- a/index.html
+++ b/index.html
@@ -299,7 +299,8 @@
   <p class="text text-white pt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit nobis sunt dicta laudantium id nemo recusandae officia tenetur.Commodi ab ea magnam officia tenetur.</p>
 </div>
 <div class="col-xs-12 col-sm-4 pt-5 px-5">
-  <i class="fa-brands fa-facebook" class="logo1 width-100px"></i>
+  <div class="h-90px w-90px">
+    <i class="fa-brands fa-facebook text-white"></i></div>
   <h5 class="title pt-4">E-mail</h5>
       <p class="card-text text-white">With supporting text below as a natural lead-in to additional conten</p>
         <h5 class="title">Telephone</h5>
